[gd_scene load_steps=4 format=3 uid="uid://cf0a255moc5fj"]

[ext_resource type="Script" uid="uid://bynjkeuljy6vw" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bd3ug7yitp6w5" path="res://assets/main_menu.png" id="2_wu84c"]
[ext_resource type="AudioStream" uid="uid://c25421ta88qht" path="res://sounds/mainsound.mp3" id="3_8ln24"]

[node name="Node2D_main_menu" type="Node2D"]
script = ExtResource("1_bqqt6")

[node name="Sprite2D_Background" type="Sprite2D" parent="."]
position = Vector2(576, 323.75)
scale = Vector2(0.75, 0.633301)
texture = ExtResource("2_wu84c")

[node name="CanvasLayer_UILayer" type="CanvasLayer" parent="."]

[node name="Button_NewGame" type="Button" parent="CanvasLayer_UILayer"]
offset_left = 768.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 113.0
text = "Новая игра"

[node name="Button_SaveButton" type="Button" parent="CanvasLayer_UILayer"]
offset_left = 768.0
offset_top = 128.0
offset_right = 1088.0
offset_bottom = 177.0
text = "Сохранить"

[node name="Button_LoadButton" type="Button" parent="CanvasLayer_UILayer"]
offset_left = 768.0
offset_top = 192.0
offset_right = 1088.0
offset_bottom = 241.0
text = "Загрузить"

[node name="Button_Settings" type="Button" parent="CanvasLayer_UILayer"]
offset_left = 768.0
offset_top = 256.0
offset_right = 1088.0
offset_bottom = 305.0
text = "settings"

[node name="Button_QuitButton" type="Button" parent="CanvasLayer_UILayer"]
offset_left = 768.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 369.0
text = "Выход"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8ln24")
autoplay = true
